Addition of "https" to CDN

--- a/Business-Care-Plans.html
+++ b/Business-Care-Plans.html
@@ -1,130 +1,137 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Pine health | Business</title>
-	<meta charset="Utf-8">
-	<meta name="viewport" content="initial-scale=1, maximum-scale=1"/>	
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" type="text/css" href="css/responsive.css">
+    <title>Pine health | Business</title>
+    <meta charset="Utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/responsive.css">
 </head>
+
 <body>
-	<div>
-		<header>
-			<div id="firstHeader">
-				<a class="logo" href="Pinehealth.html"><img src="images/pine_health.png"></a>
-			<nav class="mainMenu">
-				<a href="individual-family.html">Individual and Family</a>
-				<a href="Business.html" class="currentPage">Business</a>
-				<a href="Partners.html">Partners</a>
-				<span class="rightPosition">
+    <div>
+        <header>
+            <div id="firstHeader">
+                <a class="logo" href="Pinehealth.html"><img src="images/pine_health.png"></a>
+                <nav class="mainMenu">
+                    <a href="individual-family.html">Individual and Family</a>
+                    <a href="Business.html" class="currentPage">Business</a>
+                    <a href="Partners.html">Partners</a>
+                    <span class="rightPosition">
 				<a href="">0702-222-2222</a>
 				<a href="get-quote.html">Login</a>
 				</span>
-			</nav>	
-			</div>
-			<div id="secondHeader">
-				<a class="logo" href="Pinehealth.html"><img src="images/pine_health.png"></a>
-			<nav class="subMenu">
-				<a href="Business.html">Overview</a>
-				<a href="Business-Care-Plans.html" class="currentPage2">Plans</a>
-				<a href="Business-Care-Resources.html">Doctors and Hospitals</a>
-				<a><button class="rightPosition getQuoteButton2 bgColorBlack">Get a Quote</button></a>
-			</nav>
-			</div>
-			<div id="flashBanner"><!-- Holds any furture flash banner created using JQuery-->
-			</div>
-			<!--Mobile header with hamburger icon-->
-			<div id="mobileHeader">
-				<a class="logo" href="Pinehealth.html"><img src="images/pine_health.png"></a>
-			<nav class="rightPosition">
-				<a class="hideOnClick smallScreen" href="">0702-222-2222</a>
-				<a id="logIn" class="smallScreen" href="Login.html">Login</a>
-				<a><button class="hideOnClick getQuoteButton2 bgColorBlack" href="">Get a Quote</button></a>
-				<!--hamburger icon-->
-    			<button aria-label='Toggle menu' class='nav-button button-lines button-lines-x close' role='button' type='button'>
+                </nav>
+            </div>
+            <div id="secondHeader">
+                <a class="logo" href="Pinehealth.html"><img src="images/pine_health.png"></a>
+                <nav class="subMenu">
+                    <a href="Business.html">Overview</a>
+                    <a href="Business-Care-Plans.html" class="currentPage2">Plans</a>
+                    <a href="Business-Care-Resources.html">Doctors and Hospitals</a>
+                    <a><button class="rightPosition getQuoteButton2 bgColorBlack">Get a Quote</button></a>
+                </nav>
+            </div>
+            <div id="flashBanner">
+                <!-- Holds any furture flash banner created using JQuery-->
+            </div>
+            <!--Mobile header with hamburger icon-->
+            <div id="mobileHeader">
+                <a class="logo" href="Pinehealth.html"><img src="images/pine_health.png"></a>
+                <nav class="rightPosition">
+                    <a class="hideOnClick smallScreen" href="">0702-222-2222</a>
+                    <a id="logIn" class="smallScreen" href="Login.html">Login</a>
+                    <a><button class="hideOnClick getQuoteButton2 bgColorBlack" href="">Get a Quote</button></a>
+                    <!--hamburger icon-->
+                    <button aria-label='Toggle menu' class='nav-button button-lines button-lines-x close' role='button' type='button'>
      			<span class='lines'></span>
-   		 		</button>			
-			</nav>
-			</div><!--end of mobile header with hamburger icon--> 	
-			<div id="flashBanner"><!-- Holds any furture flash banner created using JQuery-->
-			</div>		
-		</header>	
-   		<section><!--Mobile navigation-->
-  			<nav class='nav-wrapper'>
-				<div class='mobileNav'>
-    				<h6 class="menuLabel">For You & Family</h6>
-					<a href="Individual-family.html">Overview</a>
-					<a href="Individual-family-Plans.html">Plans</a>
-					<a href="Individual-family-Resources.html">Doctors and Hospitals</a>
-    			</div>
-    			<div class='mobileNav'>
-			    	<h6 class="menuLabel">For Business</h6>
-					<a href="Business.html">Overview</a>
-					<a href="Business-Care-Plans.html">Plans</a>
-					<a href="Business-Care-Resources.html">Doctors and Hospitals</a>
-   				</div>
-    			<div class='mobileNav'>
-    				<h6 class="menuLabel">For Brokers</h6>
-					<a href="Brokers.html">Overview</a>
-    			</div>    
-  			</nav><!--End of Mobile Navigation-->   		
-  		</section>		
-  		<section id="reloadedContent">
-  			<div id="topGap"></div>
-			<div id="pageContent">
-				<h1 class="headingCentered2">Plans that work for your business.</h1>
-				<p class=" mediumHeading headingCentered2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sed vehicula lorem, at dictum sem. Sed interdum condimentum imperdiet. Ut suscipit, ante vel ultricies porttitor, ligula arcu congue neque.</p>
-			</div>
-			<div class="aboveFooter">
-				<p>Ready to sign up your company?</p><big>
+   		 		</button>
+                </nav>
+            </div>
+            <!--end of mobile header with hamburger icon-->
+            <div id="flashBanner">
+                <!-- Holds any furture flash banner created using JQuery-->
+            </div>
+        </header>
+        <section>
+            <!--Mobile navigation-->
+            <nav class='nav-wrapper'>
+                <div class='mobileNav'>
+                    <h6 class="menuLabel">For You & Family</h6>
+                    <a href="Individual-family.html">Overview</a>
+                    <a href="Individual-family-Plans.html">Plans</a>
+                    <a href="Individual-family-Resources.html">Doctors and Hospitals</a>
+                </div>
+                <div class='mobileNav'>
+                    <h6 class="menuLabel">For Business</h6>
+                    <a href="Business.html">Overview</a>
+                    <a href="Business-Care-Plans.html">Plans</a>
+                    <a href="Business-Care-Resources.html">Doctors and Hospitals</a>
+                </div>
+                <div class='mobileNav'>
+                    <h6 class="menuLabel">For Brokers</h6>
+                    <a href="Brokers.html">Overview</a>
+                </div>
+            </nav>
+            <!--End of Mobile Navigation-->
+        </section>
+        <section id="reloadedContent">
+            <div id="topGap"></div>
+            <div id="pageContent">
+                <h1 class="headingCentered2">Plans that work for your business.</h1>
+                <p class=" mediumHeading headingCentered2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sed vehicula lorem, at dictum sem. Sed interdum condimentum imperdiet. Ut suscipit, ante vel ultricies porttitor, ligula arcu congue neque.</p>
+            </div>
+            <div class="aboveFooter">
+                <p>Ready to sign up your company?</p><big>
 				<h1 class="col-45">Ask us for a quote.</h1>
 				<button class="aboveFooterButton1 bgColorWhite col-20" href="">Get a Quote</button>		
 				<button class="aboveFooterButton2 bgColorBlue col-20" href="">0702-222-2222</button>
 				</big>
-			</div>
-		</section>
-		<footer>
-		<div class="firstFooter">
-			<div class="col-38 smallScreen">
-				<h4>Subscribe to our newsletter</h4>
-				<div class="subscribeBox">
-				<input type="email" name="email" placeholder="name@email.com"><img href="" src="images/subArrow2.png" alt="Subscribe"></div>
-    		</div>
-			<div class="col-15 col-25 col-50">
-				<h4>Products</h4>
-				<p><a href="Pinehealth.html">For You & Family</a></p>
-				<p><a href="Pinehealth.html">For Business</a></p>
-				<p><a href="Pinehealth.html">For Providers</a></p>
-			</div>
-			<div class="col-15 col-25 col-50">
-				<h4>Company</h4>
-				<p><a href="Pinehealth.html">About</a></p>
-				<p><a href="Pinehealth.html">Press</a></p>
-				<p><a href="Pinehealth.html">Careers</a></p>
-			</div>
-			<div class="col-15 col-25 col-50">
-				<h4>Resources</h4>
-				<p><a href="Pinehealth.html">FAQ</a></p>
-				<p><a href="Pinehealth.html">Editorial</a></p>
-				<p><a href="Pinehealth.html">Glossary</a></p>
-				<p><a href="Pinehealth.html">Brokers</a></p>
-				<p><a href="Pinehealth.html">Providers</a></p>
-				<p><a href="Pinehealth.html">Search Doctors & Drugs</a></p>
-				<p><a href="Pinehealth.html">Find Forms</a></p>						
-			</div>
-			<div class="col-15 col-25 col-50 forOtherScreen">
-				<h4>Legal</h4>
-				<p><a href="Pinehealth.html"> Language PDF</a></p>
-				<p><a href="Pinehealth.html"> Terms of Service</a></p>
-				<p><a href="Pinehealth.html"> Privacy Policy</a></p>
-				<p><a href="Pinehealth.html"> Non-Discrimination Notice</a></p> 
-				<p><a href="Pinehealth.html"> Compliance</a></p>
-			</nav>	
-			</div>
-		</div>
-		<div class="secondFooter">
-				<p class="col-38">Give us a call <a href="0702-222-2222">0702-222-2222</a></p>
-				<span class="col-38 forOtherScreen">
+            </div>
+        </section>
+        <footer>
+            <div class="firstFooter">
+                <div class="col-38 smallScreen">
+                    <h4>Subscribe to our newsletter</h4>
+                    <div class="subscribeBox">
+                        <input type="email" name="email" placeholder="name@email.com"><img href="" src="images/subArrow2.png" alt="Subscribe"></div>
+                </div>
+                <div class="col-15 col-25 col-50">
+                    <h4>Products</h4>
+                    <p><a href="Pinehealth.html">For You & Family</a></p>
+                    <p><a href="Pinehealth.html">For Business</a></p>
+                    <p><a href="Pinehealth.html">For Providers</a></p>
+                </div>
+                <div class="col-15 col-25 col-50">
+                    <h4>Company</h4>
+                    <p><a href="Pinehealth.html">About</a></p>
+                    <p><a href="Pinehealth.html">Press</a></p>
+                    <p><a href="Pinehealth.html">Careers</a></p>
+                </div>
+                <div class="col-15 col-25 col-50">
+                    <h4>Resources</h4>
+                    <p><a href="Pinehealth.html">FAQ</a></p>
+                    <p><a href="Pinehealth.html">Editorial</a></p>
+                    <p><a href="Pinehealth.html">Glossary</a></p>
+                    <p><a href="Pinehealth.html">Brokers</a></p>
+                    <p><a href="Pinehealth.html">Providers</a></p>
+                    <p><a href="Pinehealth.html">Search Doctors & Drugs</a></p>
+                    <p><a href="Pinehealth.html">Find Forms</a></p>
+                </div>
+                <div class="col-15 col-25 col-50 forOtherScreen">
+                    <h4>Legal</h4>
+                    <p><a href="Pinehealth.html"> Language PDF</a></p>
+                    <p><a href="Pinehealth.html"> Terms of Service</a></p>
+                    <p><a href="Pinehealth.html"> Privacy Policy</a></p>
+                    <p><a href="Pinehealth.html"> Non-Discrimination Notice</a></p>
+                    <p><a href="Pinehealth.html"> Compliance</a></p>
+                    </nav>
+                </div>
+            </div>
+            <div class="secondFooter">
+                <p class="col-38">Give us a call <a href="0702-222-2222">0702-222-2222</a></p>
+                <span class="col-38 forOtherScreen">
 				<h4>Subscribe to our newsletter</h4>
 			<div class="subscribeBox">
 				<input type="email" name="email" placeholder="name@email.com"><img class="submit" src="images/subArrow2.png" alt="">
@@ -147,7 +154,7 @@
 		</footer>
 	</div>
 	<script
-	src="//code.jquery.com/jquery-3.2.1.min.js"
+	src="https://code.jquery.com/jquery-3.2.1.min.js"
 	integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 	crossorigin="anonymous"></script>
 	<script> // Fallback
