Addition of login link to mobile menu

--- a/Individual-family-Plans.html
+++ b/Individual-family-Plans.html
@@ -57,6 +57,16 @@
         <section>
             <!--Mobile navigation-->
             <nav class='nav-wrapper'>
+                <div id="mobileHeader">
+                    <a class="logo" href="Pinehealth.html"><img src="images/pine_health.png"></a>
+                    <nav class="rightPosition">
+                        <a href="Login.html">Login</a>
+                        <!--hamburger icon-->
+                        <button aria-label='Toggle menu' class='nav-button button-lines button-lines-x close' role='button' type='button'>
+                        <span class='lines'></span>
+                        </button>
+                    </nav>
+                </div>
                 <div class='mobileNav'>
                     <h6 class="menuLabel">For You & Family</h6>
                     <a href="Individual-family.html">Overview</a>
