Home banner button and added responsiveness

--- a/Business-Care-Resources.html
+++ b/Business-Care-Resources.html
@@ -40,9 +40,9 @@
             <div id="mobileHeader">
                 <a class="logo" href="Pinehealth.html"><img src="images/pine_health.png"></a>
                 <nav class="rightPosition">
-                    <a class="hideOnClick smallScreen" href="">0702-222-2222</a>
+                    <a class="smallScreen" href="">0702-222-2222</a>
                     <a id="logIn" class="smallScreen" href="Login.html">Login</a>
-                    <a><button class="hideOnClick getQuoteButton2 bgColorBlack" href="">Get a Quote</button></a>
+                    <a><button class="getQuoteButton2 bgColorBlack" href="">Get a Quote</button></a>
                     <!--hamburger icon-->
                     <button aria-label='Toggle menu' class='nav-button button-lines button-lines-x close' role='button' type='button'>
      			<span class='lines'></span>
@@ -146,26 +146,27 @@
             </div>
             <div class="secondFooter">
                 <p class="col-38">Give us a call <a href="0702-222-2222">0702-222-2222</a></p>
-                <span class="col-38 forOtherScreen">
-				<h4>Subscribe to our newsletter</h4>
-			<div class="subscribeBox">
-				<input type="email" name="email" placeholder="name@email.com"><img class="submit" src="images/subArrow2.png" alt="">
-			</div>		
-		</div>
-		<div class="thirdFooter">
-			<div>
-    			<a class="socialIcons facebook" href="#"></a>
-    			<a class="socialIcons twitter" href="#"></a>
-    			<a class="socialIcons instagram" href="#"></a>
-			</div>
-			<nav class="forOtherScreen">
-				<a href="Pinehealth.html"> Language PDF</a>
-				<a href="Pinehealth.html"> Terms of Service</a>
-				<a href="Pinehealth.html"> Privacy Policy</a> 
-				<a href="Pinehealth.html"> Non-Discrimination Notice</a> 
-				<a href="Pinehealth.html"> Compliance</a>
-			</nav>
-		</div>	
+            <div class="col-38 forOtherScreen">
+                <h4>Subscribe to our newsletter</h4>
+                <div class="subscribeBox">
+                <input type="email" name="email" placeholder="name@email.com"><img class="submit" src="images/subArrow2.png" alt="">
+                </div>  
+            </div>  
+            </div>
+            <div class="thirdFooter">
+            <div>
+                <a class="socialIcons facebook" href="#"></a>
+                <a class="socialIcons twitter" href="#"></a>
+                <a class="socialIcons instagram" href="#"></a>
+            </div>
+            <nav class="forOtherScreen">
+                <a href="Pinehealth.html"> Language PDF</a>
+                <a href="Pinehealth.html"> Terms of Service</a>
+                <a href="Pinehealth.html"> Privacy Policy</a> 
+                <a href="Pinehealth.html"> Non-Discrimination Notice</a> 
+                <a href="Pinehealth.html"> Compliance</a>
+            </nav>
+            </div>  
 		</footer>
 	</div>
 	<script
