--- a/Pinehealth.html
+++ b/Pinehealth.html
@@ -31,7 +31,7 @@
             <div id="mobileHeader">
                 <a class="logo" href="Pinehealth.html"><img src="images/pine_health.png"></a>
                 <nav class="rightPosition">
-                    <a class="hideOnClick smallScreen" href="">0702-222-2222</a>
+                    <a class="smallScreen" href="">0702-222-2222</a>
                     <a id="logIn" class="smallScreen" href="Login.html">Login</a>
                     <!--hamburger icon-->
                     <button aria-label='Toggle menu' class='nav-button button-lines button-lines-x close' role='button' type='button'>
@@ -78,7 +78,13 @@
         </section>
         <section id="reloadedContent">
             <div id="pageContent">
-                <div><img src="images/pineBanner.png" class="img-100"></div>
+                <div class="homeBanner">
+                    <img src="images/pineBanner.png" class="img-100">
+                    <h2>Open enrollment is here. Get covered.</h2>
+                    <h6>Sign up to get health insurance for you,
+                    your family, and business.</h6>
+                    <button class="getQuoteButton bgColorWhite" href="">Get a Quote</button>
+                </div>
             </div>
             <div class="aboveFooter">
                 <p>Ready to become an Pine member?</p><big>
@@ -129,11 +135,12 @@
             </div>
             <div class="secondFooter">
                 <p class="col-38">Give us a call <a href="0702-222-2222">0702-222-2222</a></p>
-                <span class="col-38 forOtherScreen">
+            <div class="col-38 forOtherScreen">
 				<h4>Subscribe to our newsletter</h4>
 			<div class="subscribeBox">
 				<input type="email" name="email" placeholder="name@email.com"><img class="submit" src="images/subArrow2.png" alt="">
-			</div>		
+			</div>	
+            </div>	
 		</div>
 		<div class="thirdFooter">
 			<div>
